Started imputing scheme_management

--- a/Pump it Up - Data Cleaning.ipynb
+++ b/Pump it Up - Data Cleaning.ipynb
@@ -1702,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1820,13 +1820,443 @@
        "[766 rows x 3 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "temp_df.loc[(temp_df.scheme_management == 'Other'), ['funder', 'scheme_management', 'scheme_name']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Lake Victoria pipe scheme     19\n",
+       "Ng'au                         18\n",
+       "B                             16\n",
+       "Segese pipe scheme            15\n",
+       "Migoli                        14\n",
+       "                              ..\n",
+       "Msitu wa tembo pipe scheme     1\n",
+       "Dihimba water supply           1\n",
+       "Manyoni water supply           1\n",
+       "Tangini                        1\n",
+       "Jumuhiya ya watumia maji       1\n",
+       "Name: scheme_name, Length: 124, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df.loc[(temp_df.scheme_management.isna()), ['funder', 'scheme_management', 'scheme_name']]['scheme_name'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>scheme_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lake Victoria pipe scheme</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ng'au</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Segese pipe scheme</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Migoli</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>Msitu wa tembo pipe scheme</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>Dihimba water supply</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>Manyoni water supply</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>Tangini</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>Jumuhiya ya watumia maji</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>124 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          index  scheme_name\n",
+       "0     Lake Victoria pipe scheme           19\n",
+       "1                         Ng'au           18\n",
+       "2                             B           16\n",
+       "3            Segese pipe scheme           15\n",
+       "4                        Migoli           14\n",
+       "..                          ...          ...\n",
+       "119  Msitu wa tembo pipe scheme            1\n",
+       "120        Dihimba water supply            1\n",
+       "121        Manyoni water supply            1\n",
+       "122                     Tangini            1\n",
+       "123    Jumuhiya ya watumia maji            1\n",
+       "\n",
+       "[124 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = temp_df.loc[(temp_df.scheme_management.isna()), ['funder', 'scheme_management', 'scheme_name']]['scheme_name'].value_counts().reset_index()\n",
+    "\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([19, 18, 16, 15, 14, 13,  9,  8,  6,  5,  4,  3,  2,  1])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y['scheme_name'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40       Kazilankanda Water Supply\n",
+       "41       Huru mawela water project\n",
+       "42         World Bank Water Supply\n",
+       "43         Kimokouwa water project\n",
+       "44     Makwale water supplied sche\n",
+       "                  ...             \n",
+       "119     Msitu wa tembo pipe scheme\n",
+       "120           Dihimba water supply\n",
+       "121           Manyoni water supply\n",
+       "122                        Tangini\n",
+       "123       Jumuhiya ya watumia maji\n",
+       "Name: index, Length: 84, dtype: object"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.loc[y['scheme_name'] <= 1, 'index']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in y.loc[y['scheme_name'] <= 1, 'index']:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scheme names having missing value count 1\n",
+    "\n",
+    "~Kazilankanda Water Supply~\n",
+    "\n",
+    "~Huru mawela water project~\n",
+    "\n",
+    "~World Bank Water Supply~\n",
+    "\n",
+    "~Kimokouwa water project~\n",
+    "\n",
+    "~Makwale water supplied sche~\n",
+    "\n",
+    "~Njomlole water gravity scheme~\n",
+    "\n",
+    "~Nyangoto water suplly~\n",
+    "\n",
+    "~Utaruni pipeline~\n",
+    "\n",
+    "~Namaukula water supply~\n",
+    "\n",
+    "~Madimba water supply~\n",
+    "\n",
+    "~Elang'atadapash water proj~\n",
+    "\n",
+    "~Mavimba~\n",
+    "\n",
+    "ENDANANG'WENI SPRING\n",
+    "\n",
+    "Nyamatoke piped scheme\n",
+    "\n",
+    "Masanwa Piped water Scheme\n",
+    "\n",
+    "Ruhatwe water supply\n",
+    "\n",
+    "Kilimahewa water supply\n",
+    "\n",
+    "Mwaya Mn\n",
+    "\n",
+    "Mshewa Water Supply\n",
+    "\n",
+    "Shaba water supply\n",
+    "\n",
+    "Hgodin\n",
+    "\n",
+    "MVUM\n",
+    "\n",
+    "Nasula gravity water supply\n",
+    "\n",
+    "Kirua kahe gravity water supply trust\n",
+    "\n",
+    "Nguruma gravity water supply\n",
+    "\n",
+    "Kinyinya gravity water supply\n",
+    "\n",
+    "Mangola pipe scheme\n",
+    "\n",
+    "Maswa water supply program\n",
+    "\n",
+    "Namanga water project\n",
+    "\n",
+    "Ziwani water supply\n",
+    "\n",
+    "Saseni\n",
+    "\n",
+    "Lang'ata dapash water proj\n",
+    "\n",
+    "NCHULOWAIBALE WATER SUPPLY SCHEME\n",
+    "\n",
+    "Ihowanja\n",
+    "\n",
+    "Muhalala water supply\n",
+    "\n",
+    "Malinyi\n",
+    "\n",
+    "Bukirilo gravity water supply\n",
+    "\n",
+    "Mwigumbi piped scheme\n",
+    "\n",
+    "Mtama water supply\n",
+    "\n",
+    "Kyamakata Pumping water supply\n",
+    "\n",
+    "Churazo gravity water supply\n",
+    "\n",
+    "Machumba estate pipe line\n",
+    "\n",
+    "Rural water supply\n",
+    "\n",
+    "Mshiri pipeline\n",
+    "\n",
+    "Mwadui piped scheme\n",
+    "\n",
+    "Ilindi\n",
+    "\n",
+    "Nduruma pipe line\n",
+    "\n",
+    "Sukuro pipe scheme\n",
+    "\n",
+    "Nyabibuye\n",
+    "\n",
+    "Mbwinji\n",
+    "\n",
+    "Mnyuzi water supplly\n",
+    "\n",
+    "DANIDA\n",
+    "\n",
+    "Mwigimbi piped scheme\n",
+    "\n",
+    "Nyachenda water scheme\n",
+    "\n",
+    "Kaisho/Isingiro w\n",
+    "\n",
+    "Kabare gravity water supply mission\n",
+    "\n",
+    "Tank refu Mtakuja\n",
+    "\n",
+    "Hesawa\n",
+    "\n",
+    "Kamwanga Erikaswa water pr\n",
+    "\n",
+    "Mradi wa maji Kisumwa\n",
+    "\n",
+    "Shongololo gravity water supply\n",
+    "\n",
+    "QWICKWIN\n",
+    "\n",
+    "Mradi wa maji wa maji sikonge\n",
+    "\n",
+    "Dasp\n",
+    "\n",
+    "Nabaiye pipe line\n",
+    "\n",
+    "Adra\n",
+    "\n",
+    "MWS\n",
+    "\n",
+    "Mitema\n",
+    "\n",
+    "Msaginya\n",
+    "\n",
+    "Ikela Wa\n",
+    "\n",
+    "Sikonge water supply\n",
+    "\n",
+    "Lituli\n",
+    "\n",
+    "Nzul\n",
+    "\n",
+    "Nyangao Water Supply\n",
+    "\n",
+    "Gwata water supply\n",
+    "\n",
+    "Vumamti\n",
+    "\n",
+    "ENDAMASAK\n",
+    "\n",
+    "Vyama vya watumia maji\n",
+    "\n",
+    "Ilala water supply\n",
+    "\n",
+    "Msitu wa tembo pipe scheme\n",
+    "\n",
+    "Dihimba water supply\n",
+    "\n",
+    "Manyoni water supply\n",
+    "\n",
+    "Tangini\n",
+    "\n",
+    "Jumuhiya ya watumia maji"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|   scheme_name  |   scheme_management | missing_value_count |\n",
+    "|---------------:|--------------------:|--------------------:|\n",
+    "|   Migoli       |         VWC         | 1|\n",
+    "|  Kazilankanda Water Supply | VWC | 1 |\n",
+    "| Huru mawela water project | Water Board | 1 |\n",
+    "| World Bank Water Supply | Trust| 1 |\n",
+    "| Kimokouwa water project| VWC | 1 |\n",
+    "| Makwale water supplied sche | VWC| 1 |\n",
+    "| Njomlole water gravity scheme | VWC| 1 |\n",
+    "| Nyangoto water suplly | VWC| 1 |\n",
+    "| Utaruni pipeline | VWC| 1 |\n",
+    "| Namaukula water supply | VWC| 1 |\n",
+    "| Madimba water supply | Other| 1 |\n",
+    "| Elang'atadapash water proj | VWC | 1 |\n",
+    "| Mavimba | - | 1 |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "functional                 1769\n",
+       "non functional             1587\n",
+       "functional needs repair     215\n",
+       "Name: status_group, dtype: int64"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df[(temp_df.scheme_management.isna()) & (temp_df.scheme_name.isna())]['status_group'].value_counts()"
    ]
   }
  ],
