Made changes in notebook as per the directory structure of data.

--- a/Data Cleaning/Stage1 - Removing Ambiguous Columns.ipynb
+++ b/Data Cleaning/Stage1 - Removing Ambiguous Columns.ipynb
@@ -44,10 +44,10 @@
     {
      "data": {
       "text/plain": [
-       "['../data/test.csv',\n",
-       " '../data/SubmissionFormat.csv',\n",
-       " '../data/training.csv',\n",
-       " '../data/labels.csv']"
+       "['../data/source_data/test.csv',\n",
+       " '../data/source_data/SubmissionFormat.csv',\n",
+       " '../data/source_data/training.csv',\n",
+       " '../data/source_data/labels.csv']"
       ]
      },
      "execution_count": 2,
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "files = glob('../data/*.csv')\n",
+    "files = glob('../data/source_data/*.csv')\n",
     "\n",
     "files"
    ]
@@ -68,11 +68,11 @@
    "outputs": [],
    "source": [
     "# Reading the training data and labels\n",
-    "train_data = pd.read_csv('../data/training.csv')\n",
-    "train_labels = pd.read_csv('../data/labels.csv')\n",
+    "train_data = pd.read_csv('../data/source_data/training.csv')\n",
+    "train_labels = pd.read_csv('../data/source_data/labels.csv')\n",
     "\n",
     "# Reading the test data\n",
-    "test_data = pd.read_csv('../data/test.csv')"
+    "test_data = pd.read_csv('../data/source_data/test.csv')"
    ]
   },
   {
@@ -1143,8 +1143,8 @@
        "water authority       219\n",
        "company               174\n",
        "unknown               122\n",
-       "trust                  27\n",
        "other - school         27\n",
+       "trust                  27\n",
        "Name: management, dtype: int64"
       ]
      },
@@ -1484,7 +1484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### e. Dropping not_required and ambiguous columns from train and test data"
+    "### e. Dropping not required and ambiguous columns from train and test data"
    ]
   },
   {
