Imputed till scheme_management having missing value count 2.

--- a/Data Cleaning/Stage 2 - Imputing scheme_management.ipynb
+++ b/Data Cleaning/Stage 2 - Imputing scheme_management.ipynb
@@ -267,27 +267,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119</th>\n",
-       "      <td>ENDAMASAK</td>\n",
+       "      <td>Mwadui piped scheme</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>120</th>\n",
-       "      <td>Mshiri pipeline</td>\n",
+       "      <td>Hgodin</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>121</th>\n",
-       "      <td>Nyamatoke piped scheme</td>\n",
+       "      <td>QWICKWIN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>122</th>\n",
-       "      <td>Bukirilo gravity water supply</td>\n",
+       "      <td>Kinyinya gravity water supply</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123</th>\n",
-       "      <td>Hesawa</td>\n",
+       "      <td>Kirua kahe gravity water supply trust</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -296,18 +296,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                             index  scheme_name\n",
-       "0        Lake Victoria pipe scheme           19\n",
-       "1                            Ng'au           18\n",
-       "2                                B           16\n",
-       "3               Segese pipe scheme           15\n",
-       "4                           Migoli           14\n",
-       "..                             ...          ...\n",
-       "119                      ENDAMASAK            1\n",
-       "120                Mshiri pipeline            1\n",
-       "121         Nyamatoke piped scheme            1\n",
-       "122  Bukirilo gravity water supply            1\n",
-       "123                         Hesawa            1\n",
+       "                                     index  scheme_name\n",
+       "0                Lake Victoria pipe scheme           19\n",
+       "1                                    Ng'au           18\n",
+       "2                                        B           16\n",
+       "3                       Segese pipe scheme           15\n",
+       "4                                   Migoli           14\n",
+       "..                                     ...          ...\n",
+       "119                    Mwadui piped scheme            1\n",
+       "120                                 Hgodin            1\n",
+       "121                               QWICKWIN            1\n",
+       "122          Kinyinya gravity water supply            1\n",
+       "123  Kirua kahe gravity water supply trust            1\n",
        "\n",
        "[124 rows x 2 columns]"
       ]
@@ -353,189 +353,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lang'ata dapash water proj\n",
-      "Malinyi\n",
-      "ENDANANG'WENI SPRING\n",
-      "Lituli\n",
-      "Njomlole water gravity scheme\n",
-      "Msaginya\n",
-      "Utaruni pipeline\n",
-      "Ikela Wa\n",
-      "Shaba water supply\n",
-      "Saseni\n",
-      "QWICKWIN\n",
-      "Nzul\n",
-      "Huru mawela water project\n",
-      "Mshewa Water Supply\n",
-      "Ziwani water supply\n",
-      "Kamwanga Erikaswa water pr\n",
-      "Ihowanja\n",
-      "Sikonge water supply\n",
-      "Sukuro pipe scheme\n",
-      "MVUM\n",
-      "World Bank Water Supply\n",
-      "DANIDA\n",
-      "Kilimahewa water supply\n",
-      "Manyoni water supply\n",
-      "Gwata water supply\n",
-      "Mavimba\n",
-      "Nyachenda water scheme\n",
-      "Machumba estate pipe line\n",
-      "Mangola pipe scheme\n",
-      "Hgodin\n",
-      "Mnyuzi water supplly\n",
-      "Namaukula water supply\n",
-      "Kimokouwa water project\n",
-      "Mradi wa maji Kisumwa\n",
-      "Nyangoto water suplly\n",
-      "Maswa water supply program\n",
-      "Jumuhiya ya watumia maji\n",
-      "Nduruma pipe line\n",
-      "Vyama vya watumia maji\n",
-      "Mwaya Mn\n",
-      "Shongololo gravity water supply\n",
-      "Vumamti\n",
-      "Kirua kahe gravity water supply trust\n",
-      "Dasp\n",
-      "Makwale water supplied sche\n",
-      "Ilala water supply\n",
-      "Nguruma gravity water supply\n",
-      "Ilindi\n",
-      "Mwadui piped scheme\n",
-      "Mitema\n",
-      "Namanga water project\n",
-      "Masanwa Piped water Scheme\n",
-      "Kazilankanda Water Supply\n",
-      "MWS\n",
-      "Tangini\n",
-      "Rural water supply\n",
-      "Kaisho/Isingiro w\n",
-      "Adra\n",
-      "Muhalala water supply\n",
-      "Ruhatwe water supply\n",
-      "Mwigumbi piped scheme\n",
-      "Kyamakata Pumping water supply\n",
-      "Kinyinya gravity water supply\n",
-      "NCHULOWAIBALE WATER SUPPLY SCHEME\n",
-      "Kabare gravity water supply mission\n",
-      "Nabaiye pipe line\n",
-      "Madimba water supply\n",
-      "Elang'atadapash water proj\n",
-      "Churazo gravity water supply\n",
-      "Mtama water supply\n",
-      "Dihimba water supply\n",
-      "Mbwinji\n",
-      "Msitu wa tembo pipe scheme\n",
-      "Mwigimbi piped scheme\n",
-      "Nyabibuye\n",
-      "Nasula gravity water supply\n",
-      "Tank refu Mtakuja\n",
-      "Mradi wa maji wa maji sikonge\n",
-      "Nyangao Water Supply\n",
-      "ENDAMASAK\n",
-      "Mshiri pipeline\n",
-      "Nyamatoke piped scheme\n",
-      "Bukirilo gravity water supply\n",
-      "Hesawa\n"
+      "Mradi wa maji sikonge\n",
+      "Iseke\n",
+      "Borehole\n",
+      "Mkutimango water supply\n"
      ]
     }
    ],
    "source": [
-    "for i in y.loc[y['scheme_name'] == 1, 'index']:\n",
+    "for i in y.loc[y['scheme_name'] == 3, 'index']:\n",
     "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "|   scheme_name  |   scheme_management | missing_value_count |\n",
-    "|---------------:|--------------------:|--------------------:|\n",
-    "| Migoli         |         VWC         |         14           |\n",
-    "| Kazilankanda Water Supply | VWC | 1 |\n",
-    "| Huru mawela water project | Water Board | 1 |\n",
-    "| World Bank Water Supply | Trust| 1 |\n",
-    "| Kimokouwa water project| VWC | 1 |\n",
-    "| Makwale water supplied sche | VWC| 1 |\n",
-    "| Njomlole water gravity scheme | VWC| 1 |\n",
-    "| Nyangoto water suplly | VWC| 1 |\n",
-    "| Utaruni pipeline | VWC| 1 |\n",
-    "| Namaukula water supply | VWC| 1 |\n",
-    "| Madimba water supply | Other| 1 |\n",
-    "| Elang'atadapash water proj | VWC | 1 |\n",
-    "| Mavimba | - | 1 |\n",
-    "| ENDANANG'WENI SPRING | - | 1|\n",
-    "| Nyamatoke piped scheme | WUA | 1 |\n",
-    "| Masanwa Piped water Scheme | VWC | 1 |\n",
-    "| Ruhatwe water supply | WUG | 1 |\n",
-    "| Kilimahewa water supply | VWC | 1 |\n",
-    "| Mwaya Mn | WUA | 1 |\n",
-    "| Mshewa Water Supply | VWC | 1 |\n",
-    "| Shaba water supply | VWC | 1 |\n",
-    "| Hgodin | Other | 1 |\n",
-    "| MVUM | VWC | 1 |\n",
-    "| Nasula gravity water supply | - | 1 |\n",
-    "| Kirua kahe gravity water supply trust | Water Board | 1 |\n",
-    "| Nguruma gravity water supply | VWC | 1 |\n",
-    "| Kinyinya gravity water supply | VWC | 1 |\n",
-    "| Mangola pipe scheme | - | 1 |\n",
-    "| Maswa water supply program | Water authority | 1 |\n",
-    "| Namanga water project | VWC/Parastatal | 1 |\n",
-    "| Ziwani water supply | VWC | 1 |\n",
-    "| Saseni | Water authority | 1 |\n",
-    "| Lang'ata dapash water proj | VWC | 1 |\n",
-    "| NCHULOWAIBALE WATER SUPPLY SCHEME | VWC | 1 |\n",
-    "| Ihowanja | VWC | 1 |\n",
-    "| Muhalala water supply | VWC/Water Authority | 1 |\n",
-    "| Malinyi | VWC | 1 |\n",
-    "| Bukirilo gravity water supply | VWC | 1 |\n",
-    "| Mwigumbi piped scheme | WUA | 1 |\n",
-    "| Mtama water supply | VWC | 1 |\n",
-    "| Kyamakata Pumping water supply | VWC | 1 |\n",
-    "| Churazo gravity water supply | VWC | 1 |\n",
-    "| Machumba estate pipe line | VWC | 1 |\n",
-    "| Rural water supply | VWC | 1 |\n",
-    "| Mshiri pipeline | Other | 1 |\n",
-    "| Mwadui piped scheme | WUA/Parastatal | 1 |\n",
-    "| Ilindi | VWC | 1 |\n",
-    "| Nduruma pipe line | VWC/Parastatal | 1 |\n",
-    "| Sukuro pipe scheme | Other | 1 |\n",
-    "| Nyabibuye | VWC | 1 |\n",
-    "| Mbwinji | VWC | 1 |\n",
-    "| Mnyuzi water supplly | VWC | 1 |\n",
-    "| DANIDA | VWC | 1 | \n",
-    "| Mwigimbi piped scheme | WUA | 1 |\n",
-    "| Nyachenda water scheme | Water authority | 1 | \n",
-    "| Kaisho/Isingiro w | VWC/Other | 1 | \n",
-    "| Kabare gravity water supply mission | VWC | 1 |\n",
-    "| Tank refu Mtakuja | Water authority | 1 |\n",
-    "| Hesawa | - | 1 |\n",
-    "| Kamwanga Erikaswa water pr | VWC | 1 |\n",
-    "| Mradi wa maji Kisumwa | VWC | 1 |\n",
-    "| Shongololo gravity water supply | VWC/WUA | 1 |\n",
-    "| QWICKWIN | WUG/Other | 1 |\n",
-    "| Mradi wa maji wa maji sikonge | Other | 1 |\n",
-    "| Dasp | - | 1 |\n",
-    "| Nabaiye pipe line | VWC | 1 |\n",
-    "| Adra | VWC | 1 |\n",
-    "| MWS | VWC | 1 | \n",
-    "| Mitema\n",
-    "| Msaginya\n",
-    "| Ikela Wa\n",
-    "| Sikonge water supply\n",
-    "| Lituli\n",
-    "| Nzul\n",
-    "| Nyangao Water Supply\n",
-    "| Gwata water supply\n",
-    "| Vumamti\n",
-    "| ENDAMASAK\n",
-    "| Vyama vya watumia maji\n",
-    "| Ilala water supply\n",
-    "| Msitu wa tembo pipe scheme\n",
-    "| Dihimba water supply\n",
-    "| Manyoni water supply\n",
-    "| Tangini\n",
-    "| Jumuhiya ya watumia maji"
    ]
   }
  ],
